fix: css on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,9 @@ body {
 	background-color: $color-900;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 h1,
