--- a/_sass/bits/article.scss
+++ b/_sass/bits/article.scss
@@ -47,6 +47,10 @@ article.post {
 			}
 			&:not(.hero-image) {
 				width: 72%;
+
+				@media all and (max-width: 768px) {
+					width: 100%;
+				}
 			}
 		}
 	}
